<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bg"
    tools:context="com.jordan.project.activities.ForgetPasswordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <ImageView
                android:id="@+id/fp_phone_number_iv"
                style="@style/register_hint_pic"
                android:background="@mipmap/register_phone" />

            <Button
                android:id="@+id/fp_get_code_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:background="@mipmap/raid_frame"
                android:text="@string/common_get_author_code"
                android:textColor="@color/white"
                android:textSize="@dimen/register_get_code_text" />

            <EditText
                android:id="@+id/fp_phone_number_et"
                style="@style/register_edittext_text"
                android:maxLength="11"
                android:inputType="number"
                android:layout_toLeftOf="@id/fp_get_code_btn"
                android:textCursorDrawable="@null"
                android:layout_toRightOf="@id/fp_phone_number_iv"
                android:hint="@string/common_phone_number" />

        </RelativeLayout>

        <RelativeLayout style="@style/register_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fp_author_code_iv"
                style="@style/register_hint_pic"
                android:background="@mipmap/register_author_code" />

            <EditText
                android:id="@+id/fp_author_code_et"
                style="@style/register_edittext_text"
                android:inputType="number"
                android:layout_toRightOf="@id/fp_author_code_iv"
                android:textCursorDrawable="@null"
                android:maxLength="6"
                android:hint="@string/common_auth_code" />
        </RelativeLayout>

        <RelativeLayout style="@style/register_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fp_password_iv"
                style="@style/register_hint_pic"
                android:background="@mipmap/register_password" />

            <EditText
                android:id="@+id/fp_password_et"
                style="@style/register_edittext_text"
                android:layout_toRightOf="@id/fp_password_iv"
                android:textCursorDrawable="@null"
                android:maxLength="12"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/return_password" />
        </RelativeLayout>

        <RelativeLayout style="@style/register_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fp_re_password_iv"
                style="@style/register_hint_pic"
                android:background="@mipmap/register_repassword" />

            <EditText
                android:id="@+id/fp_re_password_et"
                style="@style/register_edittext_text"
                android:layout_toRightOf="@id/fp_re_password_iv"
                android:textCursorDrawable="@null"
                android:maxLength="12"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/common_confirm_password" />
        </RelativeLayout>

        <RelativeLayout style="@style/register_line" />


    </LinearLayout>

    <Button
        android:id="@+id/fp_confirm_btn"
        style="@style/bottom_relativeLayout"
        android:text="@string/common_confirm" />
</RelativeLayout>